fixed the horizontal nav bar and got the spacing right between li elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,19 +28,37 @@ body {
 .list-item a,
 .logo {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
+    color: #FFF;
+    float: left;
 }
 
 .list-item {
     font-family: 'Muli', sans-serif;
     text-align: center;
-    margin: 15px auto;
+    margin: 27px auto;
+}
+
+.list-item a {
+    margin-right: 20px;
 }
 
 .logo {
     height: 70px;
     width: 80px;
     display: inline;
+    /* margin-
+    margin-left: 20px;
+    margin-right: 50%; */
+    margin: 7px 50% 0 70px;
+}
+
+#one {
+    margin-left: 50px;
+}
+
+#four a,
+#five a {
+    padding-bottom: 10px;
 }
 
 .nav-button {
